--- a/authorization-sv/src/main/resources/application.properties
+++ b/authorization-sv/src/main/resources/application.properties
@@ -5,9 +5,12 @@ spring.datasource.url=jdbc:postgresql://${DB_URL}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.jdbc.datasource=DEBUG
 
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
