--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=api-gateway
-server.port=433
+server.port=443
+
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
+eureka.client.service-url.defaultZone=http://${EUREKA_URL}/eureka
