--- a/type-sv/src/main/resources/application.properties
+++ b/type-sv/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=authorization-sv
-server.port=8080
+spring.application.name=type-sv
+server.port=8081
 
 spring.datasource.url=jdbc:postgresql://${DB_URL}/${DB_NAME}
 spring.datasource.username=${DB_USER}
