--- a/traceability-sv/src/main/resources/application.properties
+++ b/traceability-sv/src/main/resources/application.properties
@@ -5,8 +5,7 @@ server.port=8082
 spring.datasource.url=jdbc:postgresql://${DB_URL}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.postgresql.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -16,4 +15,5 @@ eureka.client.serviceUrl.defaultZone=http://${EUREKA_URL}/eureka
 spring.kafka.bootstrap-servers=${KAFKA_URL}
 spring.kafka.consumer.group-id=traceability-sv
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
