--- a/requirement-sv/src/main/resources/application.properties
+++ b/requirement-sv/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=requirement-sv
 server.port=8083
 
 # Database
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DB_URL}/${DB_NAME}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -11,3 +12,5 @@ spring.jpa.show-sql=true
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_URL}/eureka
 
+# Kafka
+spring.kafka.bootstrap-servers=${KAFKA_URL}
