--- a/requirement-sv/src/main/resources/application.properties
+++ b/requirement-sv/src/main/resources/application.properties
@@ -14,3 +14,6 @@ eureka.client.serviceUrl.defaultZone=http://${EUREKA_URL}/eureka
 
 # Kafka
 spring.kafka.bootstrap-servers=${KAFKA_URL}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
