modificacion en el dockerfile y kafkaconfig

--- a/traceability-sv/Dockerfile
+++ b/traceability-sv/Dockerfile
@@ -3,6 +3,8 @@ FROM eclipse-temurin:17-jdk AS runtime
 # Establece el directorio de trabajo
 WORKDIR /app
 
+COPY target/traceability-sv-0.0.1-SNAPSHOT.jar /app/app.jar
+
 # Exponer el puerto de la aplicación
 EXPOSE 8082
 
