--- a/requirement-sv/pom.xml
+++ b/requirement-sv/pom.xml
@@ -112,6 +112,11 @@
 			<artifactId>minio</artifactId>
 			<version>8.5.11</version>
 		</dependency>
+		<dependency>
+			<groupId>com.ticket.shared</groupId>
+			<artifactId>file-service-library</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
