Añadido el FileService como dependencia

--- a/comment-sv/pom.xml
+++ b/comment-sv/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.ticket.shared</groupId>
+			<artifactId>file-service-library</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
