--- a/comment-sv/pom.xml
+++ b/comment-sv/pom.xml
@@ -104,6 +104,11 @@
 			<artifactId>file-service-library</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
