--- a/traceability-sv/Dockerfile
+++ b/traceability-sv/Dockerfile
@@ -1,9 +1,7 @@
-FROM eclipse-temurin:17-jdk AS runtime
+FROM eclipse-temurin:17-jdk-alpine
 
 # Establece el directorio de trabajo
 WORKDIR /app
-
-COPY target/traceability-sv-0.0.1-SNAPSHOT.jar /app/app.jar
 
 # Exponer el puerto de la aplicación
 EXPOSE 8082
