--- a/requirement-sv/pom.xml
+++ b/requirement-sv/pom.xml
@@ -117,6 +117,10 @@
 			<artifactId>file-service-library</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
