--- a/requirement-sv/src/main/resources/application.properties
+++ b/requirement-sv/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.show-sql=true
 # Eureka
 eureka.client.serviceUrl.defaultZone=http://${EUREKA_URL}/eureka
 
+spring.cloud.openfeign.circuitbreaker.enabled=true
+
 # Kafka
 spring.kafka.bootstrap-servers=${KAFKA_URL}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
