--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -40,7 +40,8 @@ services:
       - ./minio/data:/data
     ports:
       - "9000:9000"
-    command: server /data
+      - "9001:9001"
+    command: server /data --console-address ":9001"
     networks:
       - app_net
 
