Todo andando joya, posta, el eliminar funciona

--- a/.env-build
+++ b/.env-build
@@ -6,4 +6,5 @@ DB_USER=postgres
 DB_PASSWORD=root
 DB_URL=localhost:5432
 KAFKA_URL=localhost:29092
-EUREKA_RL=localhost:8761
+EUREKA_URL=localhost:8761
+ISSUER_URI=https://dev-22vijuiwzcze21d0.us.auth0.com/
