--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 MINIO_ACCESS_KEY=admin
 MINIO_SECRET_KEY=adminadmin
 MINIO_URL=minio:9000
+ISSUER_URI=https://dev-22vijuiwzcze21d0.us.auth0.com/
 
 # API Gateway
 GATEWAY_DIR=./api-gateway/target
