--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.gateway.discovery.locator.enabled=true
 eureka.client.service-url.defaultZone=http://${EUREKA_URL}/eureka
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URI}
