--- a/user-sv/pom.xml
+++ b/user-sv/pom.xml
@@ -103,6 +103,11 @@
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.5.5.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>com.tickets.library</groupId>
+			<artifactId>request-interceptor</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
