--- a/requirement-sv/pom.xml
+++ b/requirement-sv/pom.xml
@@ -121,6 +121,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.tickets.library</groupId>
+			<artifactId>request-interceptor</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
