--- a/type-sv/pom.xml
+++ b/type-sv/pom.xml
@@ -95,7 +95,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.tickets.library</groupId>
+			<artifactId>request-interceptor</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
