--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.cloud.gateway.discovery.locator.enabled=true
 eureka.client.service-url.defaultZone=http://${EUREKA_URL}/eureka
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${ISSUER_URI}
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.security=DEBUG
