--- a/comment-sv/pom.xml
+++ b/comment-sv/pom.xml
@@ -114,6 +114,10 @@
 			<artifactId>request-interceptor</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
